# daily-bing-wallpaper-applet

./: Cargo.toml  README.md  justfile
i18n/en/: daily_bing_wallpaper_applet.ftl
i18n/sv/: daily_bing_wallpaper_applet.ftl
resources/: app.desktop  app.metainfo.xml
src/: app.rs
